tests/neg/call.stk
fun foo(x: Int): void = x p

fun bar(x: Int): void =
  foo  // error
  x p

fun main =
  bar    // error
  10 p
